src/test/ui/issues/issue-46112.stderr
error[E0308]: arguments to this function are incorrect
  --> $DIR/issue-46112.rs:9:18
   |
LL | fn main() { test(Ok(())); }
   |                  ^^^--^
   |                     |
   |                     expected `Option<()>`, found `()`
   |
help: provide an argument of the correct type
   |
LL | fn main() { test(({Option<()>})); }
   |                  ^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
